--- a/flux-clusters/dev-cluster/flux-system/gotk-sync.yaml
+++ b/flux-clusters/dev-cluster/flux-system/gotk-sync.yaml
@@ -21,7 +21,7 @@ metadata:
 spec:
   interval: 10m0s
   path: ./flux-clusters/dev-cluster
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: flux-system
